output/context/jacksonDatabind_tests/com/fasterxml/jackson/failing/TestMapJsonValueKey.java
 Wat(String wat)
public String getWat()
public String toString()
public void testMapJsonValueKey() throws Exception
